fix svg overlapping content

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -193,21 +193,14 @@ button{
     margin-top: 2rem;
 }
 
- .paragraph::before{
+ .answer::before{
     content:'';
-    display: none;
     position: absolute;
-    top:-12px;
-    left:0;
-    width: 100%;
+    top: 5px;
+    left: 15px;
+    width: 95%;
     height: 1px;
     background-color: #fff;
-}
-
-.paragraph{
-    position: relative;
-    font-size: 16px;
-    line-height: 25px;
 }
 
 .container {
@@ -257,6 +250,7 @@ button{
   }
   
   .answer {
+      position: relative;
     padding: 1rem;
     line-height: 25px;
   }
